hphp/test/zend/bad/Zend/tests/closure_017.php
<?php

$a = function(&$a) { $a = 1; };

$a($a);

?>